<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInVM" type="com.adithyasapplication.app.modules.signin.data.viewmodel.SignInVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearGroup29"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_107pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearFrame33"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearFrame34"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_width="wrap_content" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSignIn"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{signInVM.signInModel.txtSignIn}"
                        style="@style/txtOceanwidesemibold32" tools:text="@string/lbl_sign_in"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtWelcomeBack"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{signInVM.signInModel.txtWelcomeBack}"
                        style="@style/txtIntersemibold16" tools:text="@string/lbl_welcome_back"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearFrame32"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_48pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearFrame24"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPhoneNumber"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@{signInVM.signInModel.txtPhoneNumber}"
                            style="@style/txtIntermedium16" tools:text="@string/lbl_phone_number"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:hint="@string/lbl_9090898978"
                            android:id="@+id/textInputLayFrame20"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12pxv"
                            android:layout_width="match_parent"
                            android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">

                            <com.google.android.material.textfield.TextInputEditText
                                android:ellipsize="end"
                                android:id="@+id/etFrame20"
                                android:inputType="number"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:singleLine="true"
                                android:text="@={signInVM.signInModel.etFrame20Value}"
                                android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearFrame25"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPassword"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@{signInVM.signInModel.txtPassword}"
                            style="@style/txtIntermedium16" tools:text="@string/lbl_password"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:hint="@string/lbl2"
                            android:id="@+id/textInputLayFrame21"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12pxv"
                            android:layout_width="match_parent"
                            android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">

                            <com.google.android.material.textfield.TextInputEditText
                                android:ellipsize="end"
                                android:id="@+id/etFrame21"
                                android:inputType="textPassword"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:singleLine="true"
                                android:text="@={signInVM.signInModel.etFrame21Value}"
                                android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linearFrame27"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <View android:background="@color/bluegray_100"
                            android:id="@+id/lineLine6"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_weight="0.25" android:layout_width="0dp"/>
                        <View android:background="@color/bluegray_100"
                            android:id="@+id/lineLine7"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_9pxh"
                            android:layout_weight="0.25" android:layout_width="0dp"/>
                        <View android:background="@color/bluegray_100"
                            android:id="@+id/lineLine8"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_weight="0.27" android:layout_width="0dp"/>
                        <View android:background="@color/bluegray_100"
                            android:id="@+id/lineLine9"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_weight="0.23" android:layout_width="0dp"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnNext"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_16pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_16pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_next"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded_1" tools:text="@string/lbl_next"/>
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/linearFrame30"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtConfirmation"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@{signInVM.signInModel.txtConfirmation}"
                            style="@style/txtIntersemibold16_1" tools:text="@string/msg_dont_have_an_ac"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnSignUp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20pxv"
                            android:layout_width="match_parent"
                            android:paddingBottom="@dimen/_16pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_16pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_sign_up2"
                            android:textAllCaps="false"
                            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_sign_up2"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView android:id="@+id/imageEllipse1"
                    android:layout_height="@dimen/_479pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_101pxv"
                    android:layout_width="@dimen/_245pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_ellipse1" tools:ignore="ContentDescription"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
